Fix width issue that cropped up in WP v5.4

--- a/src/sass/_gutenberg.scss
+++ b/src/sass/_gutenberg.scss
@@ -12,8 +12,16 @@
 		border-radius: 0;
 	}
 
-	.editor-styles-wrapper *[class^="cl-"] p:empty {
-	    display: initial;
+	.editor-styles-wrapper *[class^="cl-"] {
+
+		.wp-block {
+			max-width: 100%;
+		}
+
+		p:empty {
+		  display: initial;
+		}
+
 	}
 
 	.meta {
